# supermarket-assistant

./: README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routers/: chat.py  products.py
backend/app/services/: llm.py  product_info.py  translate.py  vision.py
backend/app/utils/: language.py  memory.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.tsx
frontend/src/components/: CameraButton.tsx  Chatbot.tsx  ImageUploadButton.tsx  LanguageSelector.tsx  MessageInput.tsx  MessageList.tsx
frontend/src/hooks/: useChat.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
