[tool]
name = "supermarket-assistant"
version = "0.1.0"
description = "A supermarket shopping assistant that provides product information and translations."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"
requests = "^2.26.0"
opencv-python = "^4.5.3.20210927"
torch = "^1.10.0"
transformers = "^4.15.0"
googletrans = "^4.0.0-rc1"